# Codex-Manager

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  SECURITY.md  TESTING.md
crates/service/: Cargo.toml
crates/service/src/: aggregate_api.rs  bootstrap.rs  lib.rs  rpc_auth.rs  shutdown.rs  startup.rs  web_access.rs
crates/service/src/account/: account_availability.rs  account_cleanup.rs  account_import.rs  account_list.rs  account_plan.rs  account_status.rs  account_warmup.rs
crates/service/src/apikey/: apikey_create.rs  apikey_list.rs  apikey_profile.rs  apikey_update_model.rs
crates/service/src/app_settings/: api.rs  env_overrides.rs  gateway.rs  mod.rs  runtime_sync.rs  service.rs  shared.rs  store.rs  ui.rs
crates/service/src/auth/: auth_account.rs  auth_login.rs  auth_tokens.rs
crates/service/src/gateway/: README.md  mod.rs  protocol_adapter.rs
crates/service/src/http/: backend_runtime.rs  codex_source.rs  mod.rs  proxy_runtime.rs  responses_websocket.rs  rpc_endpoint.rs
crates/service/src/plugin/: catalog.rs  runtime.rs
crates/service/src/requestlog/: requestlog_list.rs  requestlog_summary.rs
crates/service/src/rpc_dispatch/: account.rs  apikey.rs  app_settings.rs  codex_compat.rs  gateway.rs  mod.rs  requestlog.rs  usage.rs
crates/service/src/storage/: storage_helpers.rs
crates/service/src/usage/: usage_http.rs  usage_snapshot_store.rs  usage_token_refresh.rs
crates/service/tests/: README.md  app_settings.rs  gateway_logs.rs  rpc.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs
(+308 files in other folders)
