[package]
name = "codexmanager-service"
version.workspace = true
edition = "2021"

[dependencies]
codexmanager-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream", "socks"] }
bytes = "1"
rand = "0.8"
sha2 = "0.10"
tiny_http = "0.12"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
url = "2"
webbrowser = "0.8"
urlencoding = "2"
log = "0.4"
crossbeam-channel = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zstd = "0.13"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
